--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ body{
     width: 100vw;
     background-color: #1D1E28;
     background-image: url(./images/bg-stars.svg), url(./images/pattern-hills.svg);
-    background-repeat: no-repeat no-repeat;
     background-position: top, bottom;
-    background-size: auto, 100vw 168px;
+    background-repeat: no-repeat no-repeat;
+    background-size: auto , 100% 168px;
 }
 header{
     font-size: 18px;
@@ -24,7 +24,8 @@ header{
     text-transform: uppercase;
     color: #FFFFFF;
     max-width: 327px;
-    margin: 142px auto 0;
+    margin:0 auto;
+    padding-top: 142px;
 }
 .timer{
     display: flex;
@@ -48,16 +49,80 @@ header{
     text-align: center;
     letter-spacing: -1.08px;
     color: #FB5E84;
+    position: relative;
+    border-radius: 8px;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 .text{
-    position: absolute;
-    top: 75px;
-    margin-left: 50%;
-    transform: translateX(-50%);
     font-size: 7px;
     line-height: 9px;
     text-align: center;
-    letter-spacing: 2.95937px;
+    letter-spacing: 5.91875px;
     color: #8385A9;
+    text-transform: uppercase;
+    margin-top: 9px;
     
+}
+.layer{
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    top: 0;
+    background: #000000;
+    opacity: 0.15;
+    border-radius: 0px 0px 8px 8px;
+    z-index: 1;
+    transform: matrix(1, 0, 0, -1, 0, 0);
+    border-bottom:3px solid rgba(0,0,0,0.25);
+
+}
+.circle{
+    position: absolute;
+    background: #191A23;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    left: -6px;
+    z-index: 2;
+}
+.second{
+    position: absolute;
+    background: #191A23;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    left: 92%;
+    z-index: 2;
+    
+}
+@media (min-width:1440px){
+    body{
+        background-image: url(./images/bg-stars.svg), url(./images/pattern-hills.svg);
+        background-position: top, bottom;
+        background-repeat: no-repeat no-repeat;
+        background-size: auto , 100% 265px;
+    }
+    .digit{
+        width: 148px;
+        height: 140px;
+        letter-spacing: -2.4px;
+        font-size: 80px;
+        line-height: 71px;
+    }
+    .text{
+        font-size: 14px;
+        line-height: 19px;
+        letter-spacing: 5.91875px;
+    }
+    header{
+        font-size: 22px;
+        line-height: 29px;
+        letter-spacing: 7.5px;
+        max-width: 100%;
+    }
 }
